--- a/modules/week-1/_posts/2017-01-09-homework.md
+++ b/modules/week-1/_posts/2017-01-09-homework.md
@@ -15,7 +15,7 @@ Your homework for this week is to:
 1. Read the Syllabus.
 2. Practice with your GUI and Command-line folders and files.
     - please write a short paper on your thoughts comparing and contrasting them both.
-3. Take the <a href="https://kahoot.it/challenge/03287425?challenge-id=84387498-97d5-4d82-ae4e-eabb1c94cf58_1608731307061" target="_new">Kahoot Quiz</a> - post a screenshot of your results 
+3. Take the <a href="" target="_new">Kahoot Quiz</a> - post a screenshot of your results 
 4. Create a GitHub.com account.
 5. Create a MART 120 repository.
 6. Create a folder in for Homework 1 in your MART 120 repository
@@ -26,8 +26,6 @@ Your homework for this week is to:
 
 Specifics for Moodle
 
-1. Turn in a link to your repository (copy the link, put it into a text file and submit the text file)
+1. Turn in a link to your repository
 2. Submit your introduction video to the discussion forum in Moodle.
 3. Do your weekly check-in.
-
-<a href="https://moodle.umt.edu/mod/assign/view.php?id=1757825" target="_new">Homework 1 on Moodle</a>
