updated with examples

--- a/modules/week-10/_posts/2017-02-30-homework.md
+++ b/modules/week-10/_posts/2017-02-30-homework.md
@@ -31,3 +31,5 @@ Specifics:
 2. Change your name text so that it moves in a square pattern.
 3. Make your head get bigger and then smaller continuously.
 
+<a href="https://github.com/Montana-Media-Arts/120_CreativeCoding1-Fall2021-Samples/tree/main/Homework%2010" target="_new">Homework Example</a>
+
