--- a/modules/week-8/_posts/2017-01-20-homework.md
+++ b/modules/week-8/_posts/2017-01-20-homework.md
@@ -28,3 +28,5 @@ Specifics:
 
 6. Take the <a href="https://kahoot.it/challenge/07533844?challenge-id=84387498-97d5-4d82-ae4e-eabb1c94cf58_1614099664754" target="_new">Kahoot Quiz</a> and upload your results to your repository.
 7. Upload everything into GitHub and turn in your link to Moodle.
+
+<a href="https://github.com/Montana-Media-Arts/120_CreativeCoding1-Fall2021-Samples/tree/main/Homework%208" target="_new">Homework Example</a>
