update the to do

--- a/modules/week-2/_posts/2017-01-07-codeorg.md
+++ b/modules/week-2/_posts/2017-01-07-codeorg.md
@@ -8,7 +8,12 @@ module: 2
 <div class="tab">
   <button class="tablinks active" onclick="openTab(event, 'Overview')">Overview</button>
   <button class="tablinks" onclick="openTab(event, 'Dance')">Dance Lab</button>
+   <button class="tablinks" onclick="openTab(event, 'DanceToDo')">To Do</button>
+   <button class="tablinks" onclick="openTab(event, 'DanceReview')">Review</button>
   <button class="tablinks" onclick="openTab(event, 'Artist')">Artist Lab</button>
+   <button class="tablinks" onclick="openTab(event, 'ArtistToDo')">To Do</button>
+   <button class="tablinks" onclick="openTab(event, 'ArtistReview')">Review</button>
+   
 </div>
 
 <!-- Tab content -->
@@ -28,9 +33,17 @@ module: 2
 
 <p><a href="//www.youtube.com/embed/bVHSrWuROrk" data-lity>Dance Party Video</a></p>
 
-<p><a href="https://studio.code.org/s/dance/stage/1/puzzle/1" target="_new">Dance Party Puzzle</a></p>
+
+</div>
+
+<div id="DanceToDo" class="tabcontent">
+
+<iframe src="https://studio.code.org/s/dance/stage/1/puzzle/1" width="100%" height="500"></iframe>
 
 <p>After you complete all the sections, don't forget to save your certificate.  Just take a screenshot and save that image. You will turn that in for your homework. On windows, just press the <b>PrtScn</b> button.  On the Mac,  <b>Command+Shift+3</b></p>
+</div>
+<div id="DanceReview" class="tabcontent">
+
 </div>
 
 <div id="Artist" class="tabcontent">
@@ -39,5 +52,15 @@ module: 2
 
 <p>Finally, we are going to do some more exploration using Artist Lab.</p>
 
-<p>Go to <a href="https://studio.code.org/s/artist/stage/1/puzzle/1" target="_new">Artist Lab Puzzle</a> and go through the tutorial. Then, create something of your own at the end. Please take a screenshot of that creation and then save that with your certificate from the previous exercise.</p>
+</div>
+<div id="ArtistToDo" class="tabcontent">
+
+<iframe src="https://studio.code.org/s/artist/stage/1/puzzle/1" width="100%" height="500"></iframe> 
+
+After going through the tutorial, create something of your own at the end. Please take a screenshot of that creation and then save that with your certificate from the previous exercise.</p>
+
+</div>
+
+<div id="ArtistReview" class="tabcontent">
+
 </div>
