--- a/modules/week-11/_posts/2017-02-10-homework.md
+++ b/modules/week-11/_posts/2017-02-10-homework.md
@@ -25,5 +25,5 @@ For this homework, you are going to create a spore-like game.  It should be made
 10. Must use if/else, if and else if statements.
 11. Must use logical operators. (at least one of them)
 12. Ignore all collisions.
-13. Take the <a href="https://kahoot.it/challenge/07382193?challenge-id=84387498-97d5-4d82-ae4e-eabb1c94cf58_1615930077154" target="_new">Kahoot Quiz</a>
+13. Take the <a href="" target="_new">Kahoot Quiz</a>
 14. Upload everything to your repository and turn in your link.
