--- a/modules/week-5/_posts/2017-01-06-edit-code.md
+++ b/modules/week-5/_posts/2017-01-06-edit-code.md
@@ -19,13 +19,20 @@ jotted: true
 
 <p>Notice you can select an object, and you create code for that particular object.  Remember in Scratch where each object had their code section and then in App Lab they shared?  Here, each object has its code, but they share <b>myFirstMethod</b>.  Let's take a look at how to make the objects do something.</p>
 
+<p><img src="../imgs/EditCode.png" alt="Edit Code" /></p>
+
 <p>Once we have added code, we press <b>Run</b>, and we can see what the code does.</p>
 
 <p>Did they both say "hello"?  Good!</p>
+
+<p><img src="../imgs/FirstMethod.png" alt="First Method" /></p>
+
 </div>
 <div id="Move" class="tabcontent">
 
 <p>We can also make the objects move, and instead of having multiple move commands, we can add more attributes or options to make them move the way we want.  When you add a ,<b>move</b> command onto the screen, it will ask which way to proceed.  If you select <b>Left</b>, which way will the player move? Did you figure this out? Why?  Watch the video, and I will explain it.</p>
+
+<p><img src="../imgs/MoveCharacter.png" alt="First Method" /></p>
 
 <p><a href="//www.youtube.com/embed/dnUFXLrw1Mc" data-lity>Movement Video</a></p>
 
