--- a/modules/week-5/_posts/2017-01-06-edit-code.md
+++ b/modules/week-5/_posts/2017-01-06-edit-code.md
@@ -32,7 +32,7 @@ jotted: true
 
 <p>We can also make the objects move, and instead of having multiple move commands, we can add more attributes or options to make them move the way we want.  When you add a ,<b>move</b> command onto the screen, it will ask which way to proceed.  If you select <b>Left</b>, which way will the player move? Did you figure this out? Why?  Watch the video, and I will explain it.</p>
 
-<p><img src="../imgs/MoveCharacter.png" alt="First Method" /></p>
+<p><img src="../imgs/MoveCharacter.png" alt="Move Character" /></p>
 
 <p><a href="//www.youtube.com/embed/dnUFXLrw1Mc" data-lity>Movement Video</a></p>
 
