--- a/modules/week-5/_posts/2017-01-10-events.md
+++ b/modules/week-5/_posts/2017-01-10-events.md
@@ -8,6 +8,8 @@ jotted: true
 
 To make things more interesting, we want to add event handling.  As we know from other programs, we have event handlers for keys, mice, and event timers.  We are going to explore each of these in the next videos.
 
+<p><img src="../imgs/EventListeners.png" alt="Event Listeners" /></p>
+
 <!-- video for keys -->
 ## Key Events
 <p><a href="//www.youtube.com/embed/hdMWJxfZAeM" data-lity>Key Events Video</a></p>
