updated with a to do section

--- a/modules/week-6/_posts/2017-01-01-overview.md
+++ b/modules/week-6/_posts/2017-01-01-overview.md
@@ -39,7 +39,7 @@ module: 6
 <p><b>Bad websites</b></p>
 <ul>
 <li><a href="https://blinkee.com/" target="_new">Blinkie</a></li>
-<li><a href="http://www.wherever.com/" target="_new">Whereever</a></li>
+<li><a href="https://www.art.yale.edu/" target="_new">Yale Art</a></li>
 <li><a href="https://www.lingscars.com/" target="_new">Ling's Cars</a></li>
 </ul>
 </div>
