added to do sections

--- a/modules/week-8/_posts/2017-01-10-for-loops.md
+++ b/modules/week-8/_posts/2017-01-10-for-loops.md
@@ -10,6 +10,7 @@ jotted: true
     <button class="tablinks active" onclick="openTab(event, 'Overview')">Overview</button>
     <button class="tablinks" onclick="openTab(event, 'Simple')">Simple Example</button>
     <button class="tablinks" onclick="openTab(event, 'Game')">Game Example</button>
+     <button class="tablinks" onclick="openTab(event, 'ToDo')">To Do</button>
 </div>
 <!-- Tab content -->
 <div id="Overview" class="tabcontent" style="display:block">
@@ -156,5 +157,13 @@ If you look carefully, you see that I create a third function called **runGame**
 Run this page. Does it work? Great!
 
 </div>
+</div>
+<div id="ToDo" class="tabcontent">
+<p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="ZEJQOae" data-editable="true" data-user="retrog4m3r" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/retrog4m3r/pen/ZEJQOae">
+  JS - for loops</a> by Michael Cassens (<a href="https://codepen.io/retrog4m3r">@retrog4m3r</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 </div>
 
