--- a/modules/week-9/_posts/2017-01-12-homework.md
+++ b/modules/week-9/_posts/2017-01-12-homework.md
@@ -28,6 +28,6 @@ Here is an example page to help get you started.
 6. Use triangle(s). - keep in mind that the first point of a triangle starts in the bottom left-hand corner.
 7. Title your portrait.
 8. Sign your portrait with your name. (Just print your name using the text function)
-9. Take the <a href="" target="_new">Kahoot Quiz</a> and take a screenshot of your results.
+9. Take the <a href="https://kahoot.it/challenge/08874609?challenge-id=84387498-97d5-4d82-ae4e-eabb1c94cf58_1635225088808" target="_new">Kahoot Quiz</a> and take a screenshot of your results.
 9. Upload everything into GitHub and turn in your link to Moodle.
 
