--- a/modules/week-11/_posts/2017-01-17-loops.md
+++ b/modules/week-11/_posts/2017-01-17-loops.md
@@ -135,7 +135,7 @@ These are useful; however, we won't revisit this in detail until we get to array
 <div id="ToDo" class="tabcontent">
 <div class="tabhtml" markdown="1">
 
-<p class="codepen" data-height="600" data-theme-id="dark" data-default-tab="result" data-slug-hash="LYjgKRL" data-editable="true" data-user="retrog4m3r" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+<p class="codepen" data-height="600" data-theme-id="dark" data-default-tab="js,result" data-slug-hash="LYjgKRL" data-editable="true" data-user="retrog4m3r" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
   <span>See the Pen <a href="https://codepen.io/retrog4m3r/pen/LYjgKRL">
   p5.js Loops</a> by Michael Cassens (<a href="https://codepen.io/retrog4m3r">@retrog4m3r</a>)
   on <a href="https://codepen.io">CodePen</a>.</span>
