updated the homework

--- a/modules/week-11/_posts/2017-02-10-homework.md
+++ b/modules/week-11/_posts/2017-02-10-homework.md
@@ -6,7 +6,7 @@ jotted: false
 
 # Homework
 
-For this homework, you are going to create a spore-like game.  It should be made up of a bunch of simple shapes (they can be the same or different).  After you place them on the screen, you should move them around the screen randomly. If they leave the screen, you should have them go to the other side of the screen.  You should also have a way to place an obstacle onto the screen with your mouse.  Once the player moves off the screen through the exit, you should display a message that says "You Win!".  Don't worry about any collisions.
+For this homework, you are going to create a game.  It should be made up of a bunch of simple shapes (they can be the same or different).  After you place them on the screen, you should move them around the screen randomly. If they leave the screen, you should have them go to the other side of the screen.  You should also have a way to place an obstacle onto the screen with your mouse.  Once the player moves off the screen through the exit, you should display a message that says "You Win!".  Don't worry about any collisions.
 
 <p><a href="//youtu.be/klp-W0qsQFA" data-lity>Homework Walkthrough Video</a></p>
 
