--- a/modules/week-12/_posts/2017-01-30-homework.md
+++ b/modules/week-12/_posts/2017-01-30-homework.md
@@ -6,7 +6,7 @@ jotted: false
 
 # Homework
 
-For this homework, you are going to alter your spore-like game by defining functions and calling them in your draw method or within other functions. Again, don't worry about collisions.
+For this homework, you are going to alter your game by defining functions and calling them in your draw method or within other functions. Again, don't worry about collisions.
 
 Here is an example for <a href="https://github.com/Montana-Media-Arts/120_CreativeCoding1-Fall2021-Samples/tree/master/Homework-12-Example" target="_new">Homework 12</a>.
 
