--- a/modules/week-14/_posts/2002-01-01-why.md
+++ b/modules/week-14/_posts/2002-01-01-why.md
@@ -62,8 +62,11 @@ With arrays, one can create an array to hold all the information and then create
 
 <div id="ToDo" class="tabcontent" >
 <div class="tabhtml" markdown="1">
-If you want to make sure the circles appear, give it a try here!
-
-<iframe src="https://editor.p5js.org/" width="100%" height="800px"></iframe>
+<p class="codepen" data-height="600" data-theme-id="dark" data-default-tab="result" data-slug-hash="qBPWvmX" data-editable="true" data-user="retrog4m3r" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/retrog4m3r/pen/qBPWvmX">
+  p5.js Arrays</a> by Michael Cassens (<a href="https://codepen.io/retrog4m3r">@retrog4m3r</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 </div>
 </div>
