--- a/modules/week-14/_posts/2015-01-01-homework.md
+++ b/modules/week-14/_posts/2015-01-01-homework.md
@@ -10,7 +10,7 @@ In this homework, you are going to use your project from last time to implement 
 
 <!--<a href="//youtu.be/0ChP01lq20M" data-lity>Homework 13 Walkthrough</a>-->
 
-<a href="https://github.com/Montana-Media-Arts/120_CreativeCoding1-Fall2021-Samples/tree/main/Homework%2013" target="_new">Homework 13 Example</a>
+<a href="https://github.com/Montana-Media-Arts/120_CreativeCoding1-Fall2021-Samples/tree/main/Homework%2014" target="_blank">Homework 14 Example</a>
 
 ## Specifications
 
@@ -21,7 +21,7 @@ In this homework, you are going to use your project from last time to implement 
 5. Create an exit
 6. If the player gets to the exit, display a message on the screen that says you win.
 7. Ignore all collisions.
-8. Take the <a href="">Kahoot Quiz</a> and screenshot your results.
+8. Take the <a href="https://kahoot.it/challenge/09121383?challenge-id=84387498-97d5-4d82-ae4e-eabb1c94cf58_1638167245589" target="_blank">Kahoot Quiz</a> and screenshot your results.
 9. Upload everything to GitHub and turn in your link.
 
 Looking for more to do? (extra credit)
